Создано с помощью Colaboratory

--- a/online_store4.ipynb
+++ b/online_store4.ipynb
@@ -6,7 +6,7 @@
       "name": "online_store4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNpfjPw6Rk8GU0TLgwP2rSR",
+      "authorship_tag": "ABX9TyPE7vFpxIFuVae5p+cR/001",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +105,7 @@
       "metadata": {
         "id": "YQXk-D5P1mpt"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
       "metadata": {
         "id": "Wxh9zZzK1ph3"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         },
         "outputId": "6ed94d3c-85a0-4c6e-9f11-356f0b995945"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -458,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "rhhvXZqk1BdD",
         "colab": {
@@ -510,7 +510,7 @@
         "id": "tElu87ncTN2l",
         "outputId": "750db001-ba7a-4598-a0f3-1a107ddf032b"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +537,7 @@
         "id": "u-4QX58XTP7g",
         "outputId": "2ebd691b-e4f3-4e88-dd94-0fefef6ae261"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +562,7 @@
         "id": "utPKhFBpTR8g",
         "outputId": "18dafcff-dc9e-4bbb-e2f4-0fe0fcf18b90"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +599,7 @@
         "id": "9PhqBKbxTUNe",
         "outputId": "422986ef-64c6-4594-dfed-f5c5e4e94a98"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +636,7 @@
         "id": "Jup8MDp9TWSL",
         "outputId": "44039217-cb48-4044-9f2d-6ede82334f0f"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,7 +700,7 @@
         "id": "-nQZOLCTTYRW",
         "outputId": "d2aaa671-8f5d-4c1d-b1b8-70e8c24b3f44"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -735,7 +735,7 @@
         "id": "KUmCEpmETaUZ",
         "outputId": "c3014ee8-e8af-44c7-bd82-e77c5b44703a"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,7 +772,7 @@
         "id": "Gb5ExVwdTcpH",
         "outputId": "ed08b63a-e1d2-4a5e-a7b8-34af38533491"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,7 +810,7 @@
         "id": "HdzjvhxMTetG",
         "outputId": "1c551e52-8aec-4fb6-897f-96215ba65d0f"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -849,7 +849,7 @@
         "id": "psL-FFHLTgqe",
         "outputId": "9ac3b231-8b60-403e-fe85-bfda149a73da"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -888,7 +888,7 @@
         "id": "l2FJ0vk3Tin1",
         "outputId": "56ca4ad7-b084-4111-bbf0-d1037d7c3583"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -917,11 +917,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
+        "<b>🎯 Комментарий </b></font>\n",
         "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
-        "<br />  Данные выгружены, что можно заметить: \n",
+        "    <br />  Данные выгружены, что можно заметить: \n",
         "        \n",
         "        \n",
         "* названия столбцов привести к нижнему регистру       \n",
@@ -967,7 +965,7 @@
         "id": "xh5-wwmXU0km",
         "outputId": "7e3c8f0c-ab41-4d2a-bf8b-c998e211328b"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -995,7 +993,7 @@
         "id": "3wWaTMtLU8D0",
         "outputId": "f30f01de-5dcb-4554-8172-62b22a70578d"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,7 +1041,7 @@
       "metadata": {
         "id": "RmUYySqyVCqV"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1059,7 +1057,7 @@
         "id": "kXb4VtcSVEsf",
         "outputId": "eb13eca5-dc4b-4437-931a-cc1fdf8e25a4"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1231,7 +1229,7 @@
       "metadata": {
         "id": "bPSt5koJVHEr"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1246,7 +1244,7 @@
         "id": "wQmzXN2PVJh9",
         "outputId": "26b1f6a1-9fcd-4add-a68e-905d1183924d"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1273,7 +1271,7 @@
         "id": "Tf9Rj0OpVSxs",
         "outputId": "b2438c60-cfa1-4d77-9f90-9b1b90a38a2e"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1300,7 +1298,7 @@
         "id": "xaO78IpUVV2U",
         "outputId": "860261c8-9241-4103-c68d-a6a2e29b374c"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1329,7 +1327,7 @@
         "id": "-vN2sUKpVX8n",
         "outputId": "6dd7a9bf-b05a-4f71-ede6-4c3632c44f29"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1390,7 +1388,7 @@
       "metadata": {
         "id": "HSzSdAT8VbUC"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1402,7 +1400,7 @@
       "metadata": {
         "id": "HI9IRjFfVd6t"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1418,7 +1416,7 @@
         "id": "GlszApZaVfw9",
         "outputId": "1910f1f6-9a1e-453d-be8e-23bc0685f7b2"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1760,7 +1758,7 @@
       "metadata": {
         "id": "_nL9M0vxVlVD"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1776,7 +1774,7 @@
         "id": "HpAKGVYUVnca",
         "outputId": "2364edf2-f924-4655-8fb0-703504591dda"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2124,7 +2122,7 @@
         "id": "IXGtS6_TV9fL",
         "outputId": "ff3b9da9-01be-468b-91e7-f26d096e3d98"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2213,7 +2211,7 @@
         "id": "VUm63dNCWFF5",
         "outputId": "89013583-0b8b-4d38-b5af-6373c9e63cee"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2278,7 +2276,7 @@
         "id": "ccFpyLC3WQ68",
         "outputId": "1992416b-5115-424e-f15b-a5da8f5e7ac9"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2308,7 +2306,7 @@
         "id": "YQyJcnLMWYYJ",
         "outputId": "2d48c5fc-d75a-4cfc-a561-3abcb6f89dfb"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2344,7 +2342,7 @@
         "id": "86H_B90BWnBh",
         "outputId": "3e2e563b-ceae-4230-9a53-f2c65fc0d551"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2744,7 +2742,7 @@
         "id": "tEi-FnlRWp8a",
         "outputId": "beb40fb8-aa14-42de-f8fa-9090548e6fc3"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2938,7 +2936,7 @@
         "id": "RH7hebkZW9me",
         "outputId": "8bb3b4b0-4393-487d-c0c9-2bd8fd8ee50b"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3897,7 +3895,7 @@
         "id": "2dma93RKW_4R",
         "outputId": "22c01741-97f3-46ad-c1f9-b408143fad9d"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4247,7 +4245,7 @@
         "id": "W8cRZFRgXCCl",
         "outputId": "f681bb73-d719-4050-dc4f-e3e833705814"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4530,7 +4528,7 @@
         "id": "yAR47_WeXEQH",
         "outputId": "1559ec43-e70a-49e9-eee6-0f233164fddf"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4570,7 +4568,7 @@
         "id": "JHSLTjG4XGRf",
         "outputId": "2009712c-99ec-422d-c0f9-55cd21b1af5d"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4611,7 +4609,7 @@
         "id": "2lan4t8OXJH8",
         "outputId": "02641ff2-58f2-4ed8-a0b4-bd36f244b5e6"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4950,7 +4948,7 @@
         "id": "RLG7dqTtXU0C",
         "outputId": "76f19f96-c83d-4505-ecc4-4b036846102f"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4979,7 +4977,7 @@
         "id": "ecXnxRdzXXBE",
         "outputId": "25c366e1-1e39-4876-cc80-19d9d0ff5867"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5009,7 +5007,7 @@
         "id": "vL5xCaxeXZNH",
         "outputId": "9afa6b17-7ad5-4f16-dc81-b384bc8e6972"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5038,7 +5036,7 @@
         "id": "sPWH5ezeXbHy",
         "outputId": "3bdcdd5b-557a-492a-a261-d0897fcf7f11"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5109,7 +5107,7 @@
         "id": "63zMvx-BXiRZ",
         "outputId": "c048e43f-9a8e-4d1b-9884-7e3d798e2605"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5293,7 +5291,7 @@
       "metadata": {
         "id": "vxmHLU1HXsZQ"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5317,7 +5315,7 @@
         "id": "D1tg2_PRXuO6",
         "outputId": "c8126f94-b4bb-49ad-90dd-0970b4a7aafe"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5387,7 +5385,7 @@
       "metadata": {
         "id": "9SKMrpErX_hI"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5407,7 +5405,7 @@
         "id": "-a6vqvVjYIXu",
         "outputId": "1e2e3068-19f5-41d9-f9b0-904efea9c550"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5440,7 +5438,7 @@
         "id": "ygBjXfSXYK2U",
         "outputId": "08bf5ff1-bfd6-4f28-e36f-a4fa8ac3a4ad"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5488,7 +5486,7 @@
         "id": "_Pz4wWGAYRqW",
         "outputId": "7fb7859f-cdf5-4af2-e0be-643eb6f2fb69"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5512,7 +5510,7 @@
       "metadata": {
         "id": "tVf0P1I0YURB"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5527,7 +5525,7 @@
         "id": "fftq1_L8YWpe",
         "outputId": "b8daf1e7-8a45-4400-e4bf-f992ab213933"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5560,7 +5558,7 @@
         "id": "xBqdjuymYa-k",
         "outputId": "b1dae244-e68b-4150-b3d1-3c8c0e8a8a77"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5657,7 +5655,7 @@
         "id": "d02zLdKKYu7p",
         "outputId": "05345b5a-970d-4f5b-e166-b574ec709392"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5680,7 +5678,7 @@
       "metadata": {
         "id": "BCh3iaGdYz5a"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5691,7 +5689,7 @@
       "metadata": {
         "id": "puIW_Ib_Y3no"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5707,7 +5705,7 @@
         "id": "y-QmSbf9Y56x",
         "outputId": "98e0566c-9421-4d15-f7bb-0f9587f99057"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5880,7 +5878,7 @@
         "id": "InFt8QhTZCnL",
         "outputId": "811ae2ed-49b1-44a4-bfdb-a7e6186daf91"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5904,7 +5902,7 @@
       "metadata": {
         "id": "gZYaWKS_ZEmg"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5920,7 +5918,7 @@
         "id": "WKO2i-A6ZGnI",
         "outputId": "2d0e384b-d4a2-448a-f009-97284c18e26d"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
