Создано с помощью Colaboratory

--- a/online_store4.ipynb
+++ b/online_store4.ipynb
@@ -6,7 +6,7 @@
       "name": "online_store4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPE7vFpxIFuVae5p+cR/001",
+      "authorship_tag": "ABX9TyPUL6MM7CFI7RNn0V6tgltW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -917,7 +917,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<b>🎯 Комментарий </b></font>\n",
+        "<b>🎯 Комментарий </b>\n",
         "    <br /> \n",
         "    <br />  Данные выгружены, что можно заметить: \n",
         "        \n",
@@ -944,8 +944,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"3\", color = \"black\"> <b> \n",
+        "\n",
         "* Замените названия столбцов (приведите к нижнему регистру); </b></font>"
       ],
       "metadata": {
@@ -1024,10 +1023,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> * Преобразуйте данные в нужные типы. \n",
+        " * Преобразуйте данные в нужные типы. \n",
         "    Опишите, в каких столбцах заменили тип данных и почему; \n",
-        "    *Обработайте пропуски при необходимости</b></font>"
+        " *Обработайте пропуски при необходимости"
       ],
       "metadata": {
         "id": "AuIj-y6hU-ju"
@@ -1743,8 +1741,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> * Посчитайте суммарные продажи во всех регионах и запишите их в отдельный столбец.</b></font>"
+        " * Посчитайте суммарные продажи во всех регионах и запишите их в отдельный столбец."
       ],
       "metadata": {
         "id": "-PKR6dQ-VjTA"
@@ -2154,16 +2151,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
+        "\n",
+        "<b>🎯 Комментарий </b>\n",
         "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
-        "<br />  Выводы:\n",
+        "    <br />  Выводы:\n",
         "        \n",
         "- Были обработаны все пропуски, кроме 'rating' - пока не понятно, как их обработать.\n",
         "- В столбце name и genre  NaN были заменены на Unknown, как можно заметить  название игры и жанр игры были неизвестны. \n",
         "- Имеются пустые значения в столбцах  user_score, critic_score. Были заменены  имеющиеся пустые значения в таблице на -1. Но что интересно в столбце оценка пользователей имелась аббревиатуру 'tbd'.эта аббревиатура не скрывает в себе никаких таинственных смыслов и расшифровывается очень просто - To Be Determined, то есть \"Будет определено\".Поэтому ее можно считать также как и NaN/Поэтому данные NaN  были заменены на -1.\n",
-        "- Была произведена заменя year of release на года от той же игры только другой платформы, и был изменен тип."
+        "- Была произведена замена year of release на года от той же игры только другой платформы, и был изменен тип."
       ],
       "metadata": {
         "id": "skemoikDWCO2"
@@ -2181,8 +2177,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> * Посмотрите, сколько игр выпускалось в разные годы. Важны ли данные за все периоды?.</b></font>\n"
+        " * Посмотрите, сколько игр выпускалось в разные годы. Важны ли данные за все периоды.\n"
       ],
       "metadata": {
         "id": "pGoYqR9GWIQB"
@@ -2230,11 +2225,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
-        "<br />  Выводы:\n",
+        "<b>🎯 Комментарий </b>\n",
+        "   <br />  Выводы:\n",
         "    \n",
         "        \n",
         "- Как видно из таблицы с 1980 по 1990 компьютерные игры не были такими популярными, но  когда появились доступные для широкой публики игровые консоли и домашние компьютеры, компьютерные игры становятся частью культуры. Пик приходится на 2008-2009 год.Но со временим начали появлятся мобильные игры, соц.сети  и произошел спад влияния компьютерных игр на жизнь людей.Прогуглив.Выяснилось как раз в начале 2007 году миру была представлена операционная система IOS и в конце 2008 года состоялась презентация Android.Поэтому на графике виден спад консольных игр."
@@ -2246,8 +2238,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> * Посмотрите, как менялись продажи по платформам. Выберите платформы с наибольшими суммарными продажами и постройте распределение по годам. За какой характерный срок появляются новые и исчезают старые платформы?.</b></font>"
+        " * Посмотрите, как менялись продажи по платформам. Выберите платформы с наибольшими суммарными продажами и постройте распределение по годам. За какой характерный срок появляются новые и исчезают старые платформы?."
       ],
       "metadata": {
         "id": "jHpQ_rzdWRGV"
@@ -2896,16 +2887,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
+        "<b>🎯 Комментарий </b>\n",
         "<br />  Выводы:\n",
         "    \n",
         "        \n",
         "- Как видно из гистограммы \"как менялись продажи по платформам\", самые высокие продажи были у PS2.На втором месте X360.Два конкурента Sony и Microsoft.\n",
-        " - Средний \"Жизненный цикл\" игр составляет примерно 6-10 лет.\n",
-        " - К 2016 году на плаву осталисть 6 платформ : 'ps4','xone','pc','wiiu','3ds', 'psv' и и имели достаточно хорошие продажи."
+        "- Средний \"Жизненный цикл\" игр составляет примерно 6-10 лет.\n",
+        "- К 2016 году на плаву осталисть 6 платформ : 'ps4','xone','pc','wiiu','3ds', 'psv' и и имели достаточно хорошие продажи."
       ],
       "metadata": {
         "id": "_90lbyFVWu7D"
@@ -2914,8 +2902,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> * Возьмите данные за соответствующий актуальный период. Актуальный период определите самостоятельно в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год..</b></font>"
+        "* Возьмите данные за соответствующий актуальный период. Актуальный период определите самостоятельно в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год."
       ],
       "metadata": {
         "id": "SdHQSeibW0v9"
@@ -4909,10 +4896,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
+        "<b>🎯 Комментарий </b>\n",
         "<br />  Выводы:\n",
         "    \n",
         "        \n",
@@ -4925,8 +4909,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> * Посмотрите, как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков. Постройте диаграмму рассеяния и посчитайте корреляцию между отзывами и продажами. Сформулируйте выводы.</b></font>"
+        " * Посмотрите, как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков. Постройте диаграмму рассеяния и посчитайте корреляцию между отзывами и продажами. Сформулируйте выводы."
       ],
       "metadata": {
         "id": "YEmtf_XYXQz4"
@@ -5055,14 +5038,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
+        "<b>🎯 Комментарий </b>\n",
         "<br />  Выводы:\n",
         "    \n",
         "        \n",
-        "-Корреляция между отзывами простых пользователей и продажами составляет -0.0319, это говрит о том, что зависимости практически нет между отзывами и продажами. Об этом свидетельствует и график с ростом оценки отзова растет и продажа. Но между  оценкой критиков и продажами есть явная зависимость аж 0.406"
+        "- Корреляция между отзывами простых пользователей и продажами составляет -0.0319, это говрит о том, что зависимости практически нет между отзывами и продажами. Об этом свидетельствует и график с ростом оценки отзова растет и продажа. Но между  оценкой критиков и продажами есть явная зависимость аж 0.406."
       ],
       "metadata": {
         "id": "EIMpoPsUXdgP"
@@ -5071,8 +5051,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> *Соотнесите выводы с продажами игр на других платформах</b></font>"
+        " *Соотнесите выводы с продажами игр на других платформах."
       ],
       "metadata": {
         "id": "Sj3Sh2LwXgdE"
@@ -5258,14 +5237,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
-        "<br />  Выводы:\n",
-        "    \n",
-        "        \n",
-        "-Здесь также явное влиянияе отзывов на продажи  "
+        "<b>🎯 Комментарий </b>\n",
+        "<br />  Выводы:    \n",
+        "- Здесь также явное влиянияе отзывов на продажи.  "
       ],
       "metadata": {
         "id": "pDAL7hEwXlaH"
@@ -5274,8 +5248,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> *Посмотрите на общее распределение игр по жанрам. Что можно сказать о самых прибыльных жанрах? Выделяются ли жанры с высокими и низкими продажами?</b></font>"
+        "* Посмотрите на общее распределение игр по жанрам. Что можно сказать о самых прибыльных жанрах? Выделяются ли жанры с высокими и низкими продажами?"
       ],
       "metadata": {
         "id": "UvyTnJ0UXqPu"
@@ -5334,12 +5307,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
-        "<br />  Выводы:\n",
+        "<b>🎯 Комментарий </b>\n",
         "    \n",
+        "<br />  Выводы:    \n",
         "        \n",
         "-Как и ожидалось puzzle и adventure на последнем месте. Затo shooter на первом. "
       ],
@@ -5359,12 +5329,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> *Определите для пользователя каждого региона (NA, EU, JP):\n",
+        " *Определите для пользователя каждого региона (NA, EU, JP):\n",
         "    <br />\n",
         "<br />- Самые популярные платформы (топ-5). Опишите различия в долях продаж.\n",
         "<br />- Самые популярные жанры (топ-5). Поясните разницу.\n",
-        "<br />- Влияет ли рейтинг ESRB на продажи в отдельном регионе?</b></font>"
+        "<br />- Влияет ли рейтинг ESRB на продажи в отдельном регионе?"
       ],
       "metadata": {
         "id": "XgM3wtrGZoPB"
@@ -5457,17 +5426,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
+        "<b>🎯 Комментарий </b>\n",
         "<br />  Выводы:\n",
         "    \n",
         "        \n",
         "- North America Sales : Самая популярная платформа это  Xone, WIIU,PS4. Менее популярная PC.\n",
-        "        Europe Sales и люди живущие там чаще играют в PS4,однако на втором месте также   WIIU . Менее популярная 3DS.\n",
-        "- В Japan Sales склыдывается совсем иная тенденция самая популярная платформа это 3DS, менее популярная WIIU . Что касается жанров игр , у Японии все как всегда наоборот.Здесь больше любят играть в ролевые игры, причем с большим отрывом. Далее экшны и тд\n",
-        "        \n",
+        "Europe Sales и люди живущие там чаще играют в PS4,однако на втором месте также   WIIU . Менее популярная 3DS.\n",
+        "- В Japan Sales склыдывается совсем иная тенденция самая популярная платформа это 3DS, менее популярная WIIU . Что касается жанров игр , у Японии все как всегда наоборот.Здесь больше любят играть в ролевые игры, причем с большим отрывом. Далее экшны и тд        \n",
         "North America Sales : любимый жанр это sh00ter, затем Platform. В Европе аналогично"
       ],
       "metadata": {
@@ -5577,10 +5542,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
+        "<b>🎯 Комментарий </b>\n",
         "<br />  Выводы:\n",
         "    \n",
         "        \n",
@@ -5604,12 +5566,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div>\n",
-        "<font size=\"4\", color = \"black\"> <b> * гипотезы:\n",
+        "<b> * гипотезы:\n",
         "    <br />\n",
         "<br />- Средние пользовательские рейтинги платформ Xbox One и PC одинаковые;\n",
-        "<br />- Средние пользовательские рейтинги жанров Action (англ. «действие», экшен-игры) и Sports (англ. «спортивные соревнования») разные.\n",
-        "</b></font>"
+        "<br />- Средние пользовательские рейтинги жанров Action (англ. «действие», экшен-игры) и Sports (англ. «спортивные соревнования») разные.\n"
       ],
       "metadata": {
         "id": "DAu7RaaeYmZJ"
@@ -6054,10 +6014,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
+        "<b>🎯 Комментарий </b>\n",
         "<br />  Выводы:\n",
         "    \n",
         "        \n",
@@ -6071,11 +6028,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<div class=\"alert alert-info\", style=\"border:solid dark-blue 3px; padding: 20px\">\n",
-        "<font size=\"4\", color = \"Light-Blue\"><b>🎯 Комментарий </b></font>\n",
-        "    <br /> \n",
-        "    <font size=\"3\", color = \"black\">\n",
-        "<br />  Итоговые выводы:\n",
+        "🎯 Комментарий \n",
+        "\n",
+        "*Итоговые выводы:*\n",
         "    \n",
         "-  Пик компьютерных игр  приходится  на 2008-2009 год.Но, как появились IOS и  Android проискодит спад консольных игр. \n",
         "-  Самые высокие продажи были у PS2.\n",
@@ -6084,8 +6039,8 @@
         "- Самая популярная платформа это шутеры и платформ,на последнем месте приключения, заметим, затраты на выпуск шетуров и платформ высокие.\n",
         "- В в рейтинге игр есть недостоющие данные, которые были заменены на 'No rating', и имеено они влияют на приобретаемость игры. Так как было выяснено, что  в Северной Америке и в Европе данный рейтинг стоит на 2 месте, а в Японии аж на первом. \n",
         "- В Северной Америке и в Европе предпочитают больше играть в шутеры или platform(и самая популярная платформа Xone в Северной Америке,а в Европе PS4), в Японии напротив больше приобретают игры связанные с ролями(Ролевые игры)(популярная платформа является 3DS). \n",
-        "     Поэтому потенциально популярный продукт в Северной Америке и в Европе является PS4, однако в Японии 3DC. \n",
-        " - Рынок консольных игр постепенно падает, постепенно падает, даже 3DC, (как говрит гугл) в 2013 году чуть не вышел из игры, потому что сейчас все гоняются за новыми технологиями, графикой и тд.Но, к сожалению, не ценят идею и  замысел игры.\n"
+        "Поэтому потенциально популярный продукт в Северной Америке и в Европе является PS4, однако в Японии 3DC. \n",
+        "- Рынок консольных игр постепенно падает, постепенно падает, даже 3DC, (как говрит гугл) в 2013 году чуть не вышел из игры, потому что сейчас все гоняются за новыми технологиями, графикой и тд.Но, к сожалению, не ценят идею и  замысел игры.\n"
       ],
       "metadata": {
         "id": "WfHDXOCiZN9h"
